--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,7 +1,7 @@
-FROM node:14.16.1-alpine3.13
+FROM node:14.15.4
 WORKDIR /app
-COPY package*.json ./
+COPY package*.json  .
 RUN npm install
 COPY . .
 EXPOSE 8080
-CMD ["node", "app.js"]
+CMD [ "node","app.js" ]
